--- a/src/app/item/sample.component.html
+++ b/src/app/item/sample.component.html
@@ -1,4 +1,3 @@
-<GridLayout class="w-full h-full" backgroundColor="transparent" (loaded)="loaded($event)">
-    <Label text="Test Mask Layer" textWrap="true" class="c-white text-center t-15 v-bottom m-b-20"></Label>
+<GridLayout class="w-full h-full" (loaded)="loaded($event)">
     
 </GridLayout>
