feat(android): add support

--- a/src/app/item/sample.component.html
+++ b/src/app/item/sample.component.html
@@ -1,3 +1,3 @@
-<GridLayout class="w-full h-full" (loaded)="loaded($event)">
-    
+<GridLayout class="w-full h-full" (loaded)="loaded($event)" (layoutChanged)="onLayout($event)">
+
 </GridLayout>
